# omniforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
corpora/discriminating-v0/: manifest.json
corpora/reference-v0/: manifest.json
examples/: quickstart_taskset.json
scripts/: build_discriminating_corpus.py  build_reference_corpus.py  compare_runs.py  spy_tearsheet.py  train_ppo_demo.py
src/ebit_gym/: __init__.py  cli.py
src/ebit_gym/backtest/: __init__.py
src/ebit_gym/core/: __init__.py  export.py  grader.py  model.py  runner.py  task.py
src/ebit_gym/data/: __init__.py  sources.py
src/ebit_gym/envs/: __init__.py  single_asset.py
src/ebit_gym/eval/: __init__.py
src/ebit_gym/graders/: __init__.py  composite.py  exact.py  human.py  llm_judge.py  regex.py
src/ebit_gym/models/: __init__.py  _pricing.py  anthropic_adapter.py  mock.py  openai_adapter.py  upstage.py
src/ebit_gym/tasks/: __init__.py  trading.py
src/omniforge/: __init__.py  cli.py
src/omniforge/backtest/: __init__.py  walk_forward.py
src/omniforge/core/: __init__.py  export.py  grader.py  model.py  runner.py  task.py
src/omniforge/data/: __init__.py  sources.py
src/omniforge/envs/: __init__.py  single_asset.py
src/omniforge/eval/: __init__.py  metrics.py
src/omniforge/graders/: __init__.py  composite.py  exact.py  human.py  llm_judge.py  regex.py
src/omniforge/models/: __init__.py  _pricing.py  anthropic_adapter.py  mock.py  openai_adapter.py  upstage.py
src/omniforge/tasks/: __init__.py  trading.py
src/omniforge/wrappers/: __init__.py
tests/: test_cli.py  test_core_schemas.py  test_discriminating_corpus.py  test_env_smoke.py  test_export.py  test_graders.py  test_models.py  test_reference_corpus.py  test_runner.py  test_tasks_trading.py  test_walk_forward.py
