[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebit-gym"
version = "0.0.1"
description = "Reinforcement learning environments for financial analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ebit" }]
keywords = ["reinforcement-learning", "finance", "trading", "gymnasium"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
data = ["yfinance>=0.2"]
train = ["stable-baselines3>=2.3", "torch>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/ebit/ebit-gym"
Issues = "https://github.com/ebit/ebit-gym/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ebit_gym"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
