[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebit-gym"
version = "0.2.0"
description = "RL data platform for AI labs — task corpora, graders, model adapters, and eval harnesses."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ebit" }]
keywords = [
    "reinforcement-learning",
    "rlhf",
    "llm-evaluation",
    "ai-evaluation",
    "rl-data",
    "task-corpora",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5",
    "gymnasium>=0.29",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
data = ["yfinance>=0.2"]
train = ["stable-baselines3>=2.3", "torch>=2.0"]
models = ["openai>=1.30", "anthropic>=0.34"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/grantcho123-web/ebit-gym"
Issues = "https://github.com/grantcho123-web/ebit-gym/issues"

[project.scripts]
ebit-gym = "ebit_gym.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ebit_gym"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
